# ansible-ubuntu

./: .gitignore  README.md  add_inventory.py  ansible.cfg  del_inventory.py  monarc-clients.retry  monarc-clients.yaml  monarc-master.yaml  monarc-rpx.yaml  monarc.yaml  prepare-servers.sh  pyproject.toml
examples/: hosts
inventory/: hosts
inventory/host_vars/172.16.102.107/: generated.yaml
inventory/migrations/: 001-add_stats_token_to_inventory.py  add_stats_token_to_inventory.py
monarcbo/files/: new_monarc_clients.sh
monarcbo/tasks/: main.yaml
monarcbo/templates/: apache_vhost_conf.j2
monarcco/tasks/: main.yaml
monarcfo/handlers/: main.yaml
monarcfo/tasks/: main.yaml
monarcfo/templates/: client_apache.conf.j2  client_config.php.j2
monarcrpx/tasks/: .main.yaml.swp  main.yaml
monarcrpx/templates/: .clients_redirection.j2.swp  .hosts.j2.swp  clients_redirection.j2  hosts.j2
playbook/: add_inventory.py  add_stats_token_to_inventory.py  ansible.cfg  cronjob.sh  cronjob_update.sh  del_inventory.py  list_inventory.py  monarc.yaml  rename_deliveries.py  update.sh  update_cleanup_inventory.py  update_clients.sh  update_clients.yaml  update_clients_cleanup_inventory.py  update_deliveries.sh  update_inventory.py
playbook/migrations/: 001-add_stats_token_to_inventory.py
playbook/monarcbo/defaults/: main.yml
playbook/monarcbo/files/: del_monarc_clients.sh  new_monarc_clients.sh  update_monarc_clients.sh
playbook/monarcco/: README
playbook/monarcfo/: .swp
sshaccess/files/: netlor_authorized_keys
sshaccess/tasks/: main.yaml
(+34 files in other folders)
