[tool.poetry]
name = "ansible-ubuntu"
version = "0.1.0"
description = "MONARC Ansible Playbook for Ubuntu."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.3.1"
dnspython = "^2.0.0"
ansible = "^2.10.3"
PyMySQL = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
