[tool.poetry]
name = "ansible-ubuntu"
version = "0.1.0"
description = "MONARC Ansible Playbook for Ubuntu."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
dnspython = "^2.1.0"
ansible = "^4.7.0"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
